# ay-dev-tool-rust

./: Cargo.toml  READ.md  rustfmt.toml
doc/: channel.rs  pyt-lib.rs  screen.rs
src/: main.rs
src/app/: mod.rs  tab_app.rs
src/config/: mod.rs
src/plugins/: file_browser.rs  mod.rs  software_detector.rs  system_monitor.rs
src/ssh/: mod.rs  ssh2_client.rs  sync.rs
src/ui/: connection_manager.rs  mod.rs  plugins_panel.rs  simple_terminal.rs  tab_system.rs  terminal_emulator.rs  terminal_panel.rs
src/ui/terminal/: content_extractor.rs  emulator.rs  mod.rs  types.rs  vt100_handler.rs
src/utils/: logger.rs  mod.rs
